// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mobile 1`] = `
<ds-pagination
  aria-label="Sidenavigering"
  role="navigation"
>
  <ul>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Forrige side"
      >
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 2"
      >
        2
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-current="true"
        aria-label="Side 3"
      >
        3
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 4"
      >
        4
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Neste side"
      >
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`Preview 1`] = `
<ds-pagination
  aria-label="Sidenavigering"
  role="navigation"
>
  <ul>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Forrige side"
      >
        Forrige
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 1"
      >
        1
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 2"
      >
        2
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 3"
      >
        3
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 4"
        aria-current="true"
      >
        4
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 5"
      >
        5
      </button>
    </li>
    <li>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 10"
      >
        10
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Neste side"
      >
        Neste
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`With Anchor 1`] = `
<div style="<removed>">
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
      value="https://udir.design.no/pagination"
    >
  </div>
  <ds-pagination
    aria-label="Sidenavigering"
    role="navigation"
  >
    <ul>
      <li>
        <a
          href="#side-3"
          data-variant="tertiary"
          aria-label="Forrige side"
        >
          Forrige
        </a>
      </li>
      <li>
        <a
          href="#side-1"
          data-variant="tertiary"
          aria-label="Side 1"
        >
          1
        </a>
      </li>
      <li>
        <a
          href="#side-2"
          data-variant="tertiary"
          aria-label="Side 2"
        >
          2
        </a>
      </li>
      <li>
        <a
          href="#side-3"
          data-variant="tertiary"
          aria-label="Side 3"
        >
          3
        </a>
      </li>
      <li>
        <a
          href="#side-4"
          data-variant="tertiary"
          aria-label="Side 4"
          aria-current="true"
        >
          4
        </a>
      </li>
      <li>
        <a
          href="#side-5"
          data-variant="tertiary"
          aria-label="Side 5"
        >
          5
        </a>
      </li>
      <li>
      </li>
      <li>
        <a
          href="#side-10"
          data-variant="tertiary"
          aria-label="Side 10"
        >
          10
        </a>
      </li>
      <li>
        <a
          href="#side-5"
          data-variant="tertiary"
          aria-label="Neste side"
        >
          Neste
        </a>
      </li>
    </ul>
  </ds-pagination>
</div>
`;
